--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,45 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:gravity="center"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <Button
-            android:id="@+id/btn_query_id"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:text="@string/query_id" />
-
-        <Button
-            android:id="@+id/btn_set_status"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:text="@string/set_switch_status" />
-
-        <Button
-            android:id="@+id/btn_get_status"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:text="@string/get_switch_status" />
-
-        <Button
-            android:id="@+id/btn_encrypt_message"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:text="@string/encrypt_message" />
-
-        <TextView
-            android:id="@+id/tv_read_msg"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:text="回读消息" />
-    </LinearLayout>
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/btn_query_id"
+                android:visibility="gone"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:text="@string/query_id"/>
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/btn_set_status"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:text="@string/set_switch_status"/>
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/btn_get_status"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:text="@string/get_switch_status"/>
+
+            <Button
+                android:visibility="gone"
+                android:id="@+id/btn_encrypt_message"
+                android:layout_width="200dp"
+                android:layout_height="100dp"
+                android:text="@string/encrypt_message"/>
+
+            <TextView
+                android:id="@+id/tv_read_msg"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:text="回读消息"/>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
 
 </android.support.constraint.ConstraintLayout>
